<resources>
    <string name="app_name">Flick Finder</string>
    <string name="error_message">Could not load. The internet connection may not be working. Check back soon</string>
    <string name="detail_default">Details</string>

    <string name="drawer_open">Navigation Drawer open</string>
    <string name="drawer_close">Navigation Drawer Close</string>

    <!-- Used in Navigation Drawer  -->
    <string name="about_app">About</string>
    <string name="licences">Open Source Licences</string>
    <string name="action_favourites">Favourites</string>

    <!-- Used by preference  -->
    <string name="action_settings">Settings</string>
    <string name="add_to_watchlist">Add to Watchlist</string>

    <string name="pref_sort_label">Sorting Mode</string>
    <string name="pref_sort_key" translatable="false">sort_mode</string>

    <string name="pref_sort_popularity_label">Popularity</string>
    <string name="pref_sort_rating_label">Rating</string>

    <string name="pref_sort_popularity">popularity.desc</string>
    <string name="pref_sort_rating">vote_average.desc</string>


    <string name="pref_image_quality_key" translatable="false">image_quality</string>
    <string name="pref_image_quality_label">Image Quality</string>

    <string name="pref_quality_high_label">High</string>
    <string name="pref_quality_medium_label">Medium</string>
    <string name="pref_quality_low_label">Low</string>
    <string name="pref_quality_medium">w342</string>
    <string name="pref_quality_low">w185</string>
    <string name="pref_quality_high">w500</string>

    <string name="pref_content_settings_title">Content and Quality</string>
    <string name="pref_sync_title">Sync Settings</string>
    <string name="pref_sync_use_wifi">Update Data Only on Wifi</string>
    <string name="pref_summary_off_wifi">Disabled</string>
    <string name="pref_summary_on_wifi">Enabled</string>

    <string name="pref_use_only_wifi_key">use_wifi</string>
    <string name="pref_sync_freq_key" translatable="false">sync_frequency</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="sync_freq_default">24</string>

    <string name="share_movie_info">Share</string>
    <string name="content_desc_poster_thumbnail">Poster Image</string>
    <string name="content_desc_nav_header">Navigation Drawer Header</string>
    <string name="app_version">0.1</string>
    <string name="action_explore">Explore</string>
    <string name="action_bar_title_settings">Settings</string>

</resources>
