<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/pref_sort_popularity"
        android:entries="@array/pref_sort_options"
        android:entryValues="@array/pref_sort_values"
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_label" />

    <ListPreference
        android:defaultValue="@string/pref_quality_high"
        android:entries="@array/pref_image_quality_options"
        android:entryValues="@array/pref_image_quality_values"
        android:key="@string/pref_image_quality_key"
        android:title="@string/pref_image_quality_label" />

    <PreferenceCategory android:title="@string/pref_sync_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_use_only_wifi_key"
            android:summaryOff="@string/pref_summary_off_wifi"
            android:summaryOn="@string/pref_summary_on_wifi"
            android:title="@string/pref_sync_use_wifi" />
        <ListPreference
            android:defaultValue="@string/sync_freq_default"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="pref_sync_freq_key"
            android:title="@string/pref_title_sync_frequency" />

    </PreferenceCategory>


</PreferenceScreen>