<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/action_explore" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/action_favourites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_app" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

    -->

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_licences"
                android:title="@string/licences" />
        </menu>
    </item>
    <group>

    </group>

</menu>
